@@ -21,6 +21,10 @@ plugins {
   alias(libs.plugins.juppiter)
 }
 
+repositories {
+  maven("https://s01.oss.sonatype.org/content/repositories/snapshots/")
+}
+
 dependencies {
   api(projects.webApi)
   moduleLibrary(libs.guava)
@@ -49,8 +53,33 @@ dependencies {
   compileOnly(libs.logbackCore)
   compileOnly(libs.logbackClassic)
 
-  compileOnly("eu.cloudnetservice.cloudnet:node:4.0.0-RC10")
-  compileOnly("eu.cloudnetservice.cloudnet:bridge:4.0.0-RC10")
+  compileOnly("eu.cloudnetservice.cloudnet:node:4.0.0-RC11-SNAPSHOT")
+  compileOnly("eu.cloudnetservice.cloudnet:bridge:4.0.0-RC11-SNAPSHOT")
+}
+
+tasks.withType<Test> {
+  jvmArgs("--enable-preview")
+}
+
+tasks.withType<JavaCompile> {
+  sourceCompatibility = JavaVersion.VERSION_22.toString()
+  targetCompatibility = JavaVersion.VERSION_22.toString()
+
+  options.compilerArgs.add("-Xlint:-preview")
+  options.compilerArgs.add("--enable-preview")
+}
+
+tasks.withType<Javadoc> {
+  val options = options as? StandardJavadocDocletOptions ?: return@withType
+  options.addStringOption("-release", "22")
+  options.addBooleanOption("-enable-preview", true)
+}
+
+extensions.configure<JavaPluginExtension> {
+  toolchain {
+    vendor = JvmVendorSpec.AZUL
+    languageVersion = JavaLanguageVersion.of(22)
+  }
 }
 
 tasks.withType<Jar> {
@@ -63,6 +92,11 @@ tasks.withType<ShadowJar> {
       it.moduleGroup.startsWith("eu.cloudnetservice")
     }
   }
+}
+
+tasks.withType<JavaCompile> {
+  sourceCompatibility = JavaVersion.VERSION_22.toString()
+  targetCompatibility = JavaVersion.VERSION_22.toString()
 }
 
 moduleJson {
